[metadata]
name = pydrag
version=1.0.0
description = A modern Last.fm api wrapper
long_description = file: README.rst
url = https://github.com/tefra/pydrag
project_urls =
    Source=https://github.com/tefra/pydrag
    Documentation=https://pydrag.readthedocs.io/

author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
