[metadata]
name = pydrag
version = 20.6
description = A modern Last.fm api wrapper
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/pydrag
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source=https://github.com/tefra/pydrag
    Documentation=https://pydrag.readthedocs.io/

[options]
packages = pydrag
install_requires =
    attrs>=19.1.0
    python-dotenv>=0.10.1
    requests>=2.21.0
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    codecov
    vcrpy
    tox
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

[flake8]
exclude = tests/*
max-line-length = 88
ignore = E203, E266, E501, W503, F821
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
known_third_party = attr,requests,setuptools,vcr
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 79
