[metadata]
name = pydrag
version = 21.1
description = A modern Last.fm api wrapper
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/pydrag
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source=https://github.com/tefra/pydrag
    Documentation=https://pydrag.readthedocs.io/

[options]
packages = pydrag
install_requires =
    attrs>=19.1.0
    python-dotenv>=0.10.1
    requests>=2.21.0
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    codecov
    pre-commit
    pytest
    pytest-cov
    tox
    vcrpy
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme

[flake8]
exclude = tests/*
max-line-length = 88
ignore = E203, E266, E501, W503, F821
max-complexity = 18
select = B,C,E,F,W,T4,B9
